external-crates/move/crates/move-package-alt/tests/data/manifest_parsing_invalid/basic_invalid_environment1/Move.snap
---
source: crates/move-package-alt/tests/parsing_tests.rs
---
error: TOML parse error at line 8, column 11
  |
8 | mainnet = true
  |           ^^^^
invalid type: boolean `true`, expected a string
